--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,42 +121,45 @@
   }
 }
 
-@keyframes marquee-left-start {
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+
+@keyframes scroll-left {
   0% {
-    transform: translateX(-25%);
+    transform: translateX(0%);
   }
   100% {
-    transform: translateX(-75%);
+    transform: translateX(-50%);
   }
 }
 
-@keyframes marquee-right-start {
+@keyframes scroll-right {
   0% {
-    transform: translateX(-75%);
+    transform: translateX(-50%);
   }
   100% {
-    transform: translateX(-25%);
+    transform: translateX(0%);
   }
 }
 
-.marquee-inner {
-  display: flex;
-  width: 200%;
-  will-change: transform;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-duration: 30s;
-  backface-visibility: hidden;
-  transform: translate3d(0, 0, 0);
+.animate-scroll-left {
+  animation: scroll-left 30s linear infinite;
 }
 
-.animate-marquee-left-start {
-  animation-name: marquee-left-start;
+.animate-scroll-right {
+  animation: scroll-right 30s linear infinite;
 }
 
-.animate-marquee-right-start {
-  animation-name: marquee-right-start;
+@media (max-width: 768px) {
+  .animate-scroll-left {
+    animation: scroll-left 10s linear infinite;
+  }
+  .animate-scroll-right {
+    animation: scroll-right 10s linear infinite;
+  }
 }
+
 
 
 
